--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1853,28 +1853,21 @@
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
-                                      <span class="elementor-icon-list-text"
-                                        >Our Services</span
-                                      >
-                                    </a>
-                                  </li>
-                                  <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/corporate-local-relocation.html">
                                       <span class="elementor-icon-list-text"
                                         >Senior Moving Solution</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/corporate-local-relocation.html">
                                       <span class="elementor-icon-list-text"
                                         >Corporate Clients page</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/packing-unpacking-service.html">
                                       <span class="elementor-icon-list-text"
                                         >Individuals and Families</span
                                       >
@@ -1891,13 +1884,6 @@
                                     <a href="/book-now/index.html">
                                       <span class="elementor-icon-list-text"
                                         >Contact</span
-                                      >
-                                    </a>
-                                  </li>
-                                  <li class="elementor-icon-list-item">
-                                    <a href="#">
-                                      <span class="elementor-icon-list-text"
-                                        >Blog</span
                                       >
                                     </a>
                                   </li>
