--- a/book-now/index.html
+++ b/book-now/index.html
@@ -805,7 +805,7 @@
                             data-widget_type="text-editor.default"
                           >
                             <div class="elementor-widget-container">
-                              At Kartizo Global, we believe in clear communication and transparency
+                              Moving brings questions. We get it. At Kartizo Global, we believe in clear communication and transparency.
                             </div>
                           </div>
                         </div>
@@ -938,7 +938,39 @@
 
                                       				</div>
                                       		</div>
-                                      		<div className="elementor-element elementor-element-f108bcc elementor-widget elementor-widget-mf-select" data-id="f108bcc" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-select&quot;,&quot;mf_input_list&quot;:[{&quot;mf_input_option_text&quot;:&quot;Residential Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-1&quot;,&quot;_id&quot;:&quot;53fba73&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Commercial Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-2&quot;,&quot;_id&quot;:&quot;a839ec1&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Deep Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-3&quot;,&quot;_id&quot;:&quot;2d3f89a&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Specialized Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-4&quot;,&quot;_id&quot;:&quot;35c6830&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Move-In\/Move-Out Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-5&quot;,&quot;_id&quot;:&quot;5bef1bd&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Event Cleaning&quot;,&quot;mf_input_option_value&quot;:&quot;value-6&quot;,&quot;_id&quot;:&quot;efc2c64&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;}],&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-select.default">
+                                      				<div className="elementor-element elementor-element-b1a21bf elementor-widget elementor-widget-mf-text" data-id="b1a21bf" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-text&quot;,&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-text.default">
+                                      		<div className="elementor-widget-container">
+
+                                      <div className="mf-input-wrapper">
+                                      					<label className="mf-input-label" htmlFor="mf-input-text-b1a21bf">
+                                      			${ parent.decodeEntities(`Contact`) } 					<span className="mf-input-required-indicator"></span>
+                                      		</label>
+
+                                      	<input
+                                      		type="tel"
+                                      		className="mf-input "
+                                      		id="mf-input-text-b1a21bf"
+                                      		name="mf-text"
+                                      		placeholder="${ parent.decodeEntities(`US phone no only`) } "
+                                      							onInput=${parent.handleChange}
+                                      			onBlur=${parent.handleChange}
+                                      			aria-invalid=${validation.errors['mf-text'] ? 'true' : 'false'}
+                                      			ref=${el =>{
+                                      										parent.activateValidation({"message":"This field is required.","minLength":1,"maxLength":"","type":"none","required":false,"expression":"null"}, el)
+                                      			}}
+                                      						/>
+
+                                      					<${validation.ErrorMessage}
+                                      			errors=${validation.errors}
+                                      			name="mf-text"
+                                      			as=${html`<span className="mf-error-message"></span>`}
+                                      			/>
+
+                                      			</div>
+
+                                      				</div>
+                                      		</div>
+                                      		<div className="elementor-element elementor-element-f108bcc elementor-widget elementor-widget-mf-select" data-id="f108bcc" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-select&quot;,&quot;mf_input_list&quot;:[{&quot;mf_input_option_text&quot;:&quot;Packing and Unpacking Service&quot;,&quot;mf_input_option_value&quot;:&quot;value-1&quot;,&quot;_id&quot;:&quot;53fba73&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Coperate and Local Relocations&quot;,&quot;mf_input_option_value&quot;:&quot;value-2&quot;,&quot;_id&quot;:&quot;a839ec1&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;},{&quot;mf_input_option_text&quot;:&quot;Downsizing Service&quot;,&quot;mf_input_option_value&quot;:&quot;value-3&quot;,&quot;_id&quot;:&quot;2d3f89a&quot;,&quot;mf_input_option_status&quot;:&quot;&quot;,&quot;mf_input_option_selected&quot;:&quot;&quot;}],&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-select.default">
                                       		<div className="elementor-widget-container">
 
 
@@ -953,8 +985,8 @@
                                                     name="mf-select"
                                                     placeholder="${ parent.decodeEntities(`Select one`) } "
                                                     isSearchable=${false}
-                                                    options=${[{"label":"Residential Cleaning","value":"value-1","isDisabled":false},{"label":"Commercial Cleaning","value":"value-2","isDisabled":false},{"label":"Deep Cleaning","value":"value-3","isDisabled":false},{"label":"Specialized Cleaning","value":"value-4","isDisabled":false},{"label":"Move-In\/Move-Out Cleaning","value":"value-5","isDisabled":false},{"label":"Event Cleaning","value":"value-6","isDisabled":false}]}
-                                                    value=${parent.getValue("mf-select") ? [{"label":"Residential Cleaning","value":"value-1","isDisabled":false},{"label":"Commercial Cleaning","value":"value-2","isDisabled":false},{"label":"Deep Cleaning","value":"value-3","isDisabled":false},{"label":"Specialized Cleaning","value":"value-4","isDisabled":false},{"label":"Move-In\/Move-Out Cleaning","value":"value-5","isDisabled":false},{"label":"Event Cleaning","value":"value-6","isDisabled":false}].filter(item => item.value === parent.getValue("mf-select"))[0] : []}
+                                                    options=${[{"label":"Packing and Unpacking Service","value":"value-1","isDisabled":false},{"label":"Coperate and Local Relocations","value":"value-2","isDisabled":false},{"label":"Downsizing Service","value":"value-3","isDisabled":false}]}
+                                                    value=${parent.getValue("mf-select") ? [{"label":"Packing and Unpacking Service","value":"value-1","isDisabled":false},{"label":"Coperate and Local Relocations","value":"value-2","isDisabled":false},{"label":"Downsizing Service","value":"value-3","isDisabled":false}].filter(item => item.value === parent.getValue("mf-select"))[0] : []}
                                                     onChange=${(e)=> parent.handleSelect(e, "mf-select")}
                                                     ref=${() => {
                                       		                    register({ name: "mf-select" }, parent.activateValidation({"message":"This field is required.","minLength":1,"maxLength":"","type":"none","required":false}));
@@ -1047,27 +1079,42 @@
 
                                       				</div>
                                       		</div>
-                                      		<div className="elementor-element elementor-element-3118406 elementor-widget elementor-widget-mf-gdpr-consent" data-id="3118406" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-gdpr-consent&quot;,&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-gdpr-consent.default">
+                                      		<div className="elementor-element elementor-element-2d95b7f elementor-widget elementor-widget-mf-text" data-id="2d95b7f" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-text&quot;,&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-text.default">
                                       		<div className="elementor-widget-container">
 
                                       <div className="mf-input-wrapper">
+                                      					<label className="mf-input-label" htmlFor="mf-input-text-2d95b7f">
+                                      			${ parent.decodeEntities(`Additional Information`) } 					<span className="mf-input-required-indicator"></span>
+                                      		</label>
 
-                                      	<div className="mf-checkbox multi-option-input-type" id="mf-input-gdpr-3118406">
-                                      		<div className="mf-checkbox-option">
-                                      			<label>
-                                      										<input
-                                      					type="checkbox"
-                                      					className="mf-input mf-checkbox-input "
-                                      					name="mf-gdpr-consent"
-                                      													onInput=${ parent.handleOptin }
-                                      						aria-invalid=${validation.errors['mf-gdpr-consent'] ? 'true' : 'false'}
-                                      						ref=${ el => parent.activateValidation({"message":"This field is required.","minLength":1,"maxLength":"","type":"none","required":false,"expression":"null"}, el) }
-                                      												/>
-                                      				<span>
-                                      					I agree to Terms of Service						</span>
-                                      			</label>
+                                      	<input
+                                      		type="text"
+                                      		className="mf-input "
+                                      		id="mf-input-text-2d95b7f"
+                                      		name="mf-text"
+                                      		placeholder="${ parent.decodeEntities(`Other Info`) } "
+                                      							onInput=${parent.handleChange}
+                                      			onBlur=${parent.handleChange}
+                                      			aria-invalid=${validation.errors['mf-text'] ? 'true' : 'false'}
+                                      			ref=${el =>{
+                                      										parent.activateValidation({"message":"This field is required.","minLength":1,"maxLength":"","type":"none","required":false,"expression":"null"}, el)
+                                      			}}
+                                      						/>
+
+                                      					<${validation.ErrorMessage}
+                                      			errors=${validation.errors}
+                                      			name="mf-text"
+                                      			as=${html`<span className="mf-error-message"></span>`}
+                                      			/>
+
+                                      			</div>
+
+                                      				</div>
                                       		</div>
-                                      	</div>
+                                      		<div className="elementor-element elementor-element-3118406 elementor-widget elementor-widget-mf-gdpr-consent form-no-mrg" data-id="3118406" data-element_type="widget" data-settings="{&quot;mf_input_name&quot;:&quot;mf-gdpr-consent&quot;,&quot;mf_input_get_params_enable&quot;:&quot;no&quot;}" data-widget_type="mf-gdpr-consent.default">
+                                      		<div className="elementor-widget-container pad">
+
+                                      <div className="mf-input-wrapper">
 
                                       					<${validation.ErrorMessage}
                                       			errors=${validation.errors}
@@ -1083,7 +1130,7 @@
                                       		<div className="elementor-widget-container">
                                       					<div className="mf-btn-wraper " data-mf-form-conditional-logic-requirement="">
                                       					<button type="submit" className="metform-btn metform-submit-btn " id="">
-                                      			<span>${ parent.decodeEntities(`Request a Quote`) } </span>
+                                      			<span>${ parent.decodeEntities(`Book Now`) } </span>
                                       		</button>
                                       	        </div>
                                             				</div>
@@ -1520,7 +1567,7 @@
                             data-widget_type="text-editor.default"
                           >
                             <div class="elementor-widget-container">
-                              Moving brings questions. We get it. At Kartizo Global, we believe in clear communication and transparency. Here are answers to common questions about our moving services. Can't find what you're looking for? Give us a call at:
+                              Here are answers to common questions about our moving services. Can't find what you're looking for? Give us a call at:
                             </div>
                           </div>
                           <div
@@ -1909,28 +1956,21 @@
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
-                                      <span class="elementor-icon-list-text"
-                                        >Our Services</span
-                                      >
-                                    </a>
-                                  </li>
-                                  <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/corporate-local-relocation.html">
                                       <span class="elementor-icon-list-text"
                                         >Senior Moving Solution</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/corporate-local-relocation.html">
                                       <span class="elementor-icon-list-text"
                                         >Corporate Clients page</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="#">
+                                    <a href="/our-services/packing-unpacking-service.html">
                                       <span class="elementor-icon-list-text"
                                         >Individuals and Families</span
                                       >
@@ -1947,13 +1987,6 @@
                                     <a href="/book-now/index.html">
                                       <span class="elementor-icon-list-text"
                                         >Contact</span
-                                      >
-                                    </a>
-                                  </li>
-                                  <li class="elementor-icon-list-item">
-                                    <a href="#">
-                                      <span class="elementor-icon-list-text"
-                                        >Blog</span
                                       >
                                     </a>
                                   </li>
