--- a/service-area/service-area.html
+++ b/service-area/service-area.html
@@ -2583,21 +2583,54 @@
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="/our-services/corporate-local-relocation.html">
+                                    <a
+                                      href="/our-services/corporate-local-relocation.html"
+                                    >
+                                      <span class="elementor-icon-list-text"
+                                        >Corporate and local relocations</span
+                                      >
+                                    </a>
+                                  </li>
+                                  <li class="elementor-icon-list-item">
+                                    <a
+                                      href="/our-services/downsizing-service.html"
+                                    >
+                                      <span class="elementor-icon-list-text"
+                                        >Downsizing</span
+                                      >
+                                    </a>
+                                  </li>
+                                  <li class="elementor-icon-list-item">
+                                    <a
+                                      href="/our-services/packing-unpacking-service.html"
+                                    >
+                                      <span class="elementor-icon-list-text"
+                                        >Packing and Unpacking</span
+                                      >
+                                    </a>
+                                  </li>
+                                  <li class="elementor-icon-list-item">
+                                    <a
+                                      href="/our-solutions/move-management-for-seniors.html"
+                                    >
                                       <span class="elementor-icon-list-text"
                                         >Senior Moving Solution</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="/our-services/corporate-local-relocation.html">
+                                    <a
+                                      href="/our-solutions/move-management-for-businesses.html"
+                                    >
                                       <span class="elementor-icon-list-text"
                                         >Corporate Clients page</span
                                       >
                                     </a>
                                   </li>
                                   <li class="elementor-icon-list-item">
-                                    <a href="/our-services/packing-unpacking-service.html">
+                                    <a
+                                      href="/our-solutions/move-management-for-individual&family.html"
+                                    >
                                       <span class="elementor-icon-list-text"
                                         >Individuals and Families</span
                                       >
@@ -2607,6 +2640,13 @@
                                     <a href="/about-us/index.html">
                                       <span class="elementor-icon-list-text"
                                         >About Us</span
+                                      >
+                                    </a>
+                                  </li>
+                                  <li class="elementor-icon-list-item">
+                                    <a href="/service-area/service-area.html">
+                                      <span class="elementor-icon-list-text"
+                                        >Service Area</span
                                       >
                                     </a>
                                   </li>
