--- a/book-now/index.html
+++ b/book-now/index.html
@@ -691,7 +691,7 @@
                             <label for="service">Service</label>
                             <div class="custom-select" id="serviceDropdown">
                               <div id="selectBox" class="select-box">
-                                <span>Select an option</span>
+                                <span id="selectValu">Select an option</span>
                                 <span id="dropdownIcon" class="dropdown-icon"
                                   >&#x25BC;</span
                                 >
@@ -2323,7 +2323,7 @@
 
       document.querySelectorAll(".option").forEach((option) => {
         option.addEventListener("click", function () {
-          document.getElementById("selectBox").firstElementChild.innerText = this.innerText;
+          document.getElementById("selectValu").innerText = this.innerText;
           document.getElementById("service").value =
             this.getAttribute("data-value");
           document.getElementById("serviceOptions").style.display = "none";
@@ -2342,7 +2342,7 @@
           let fullName = document.getElementById("name").value.trim();
           let email = document.getElementById("email").value.trim();
           let phoneNumber = document.getElementById("phone").value.trim();
-          let service = document.getElementById("service").value;
+          let service = document.getElementById("selectValu").value;
           let date = document.getElementById("customDate").value.trim();
           let time = document.getElementById("customTime").value.trim();
           let address = document.getElementById("address").value.trim();
