--- a/book-now/index.html
+++ b/book-now/index.html
@@ -752,6 +752,7 @@
                               id="info"
                               name="info"
                               placeholder="Other info"
+                              required
                             ></textarea>
 
                             <button type="submit">Book Now</button>
