--- a/book-now/index.html
+++ b/book-now/index.html
@@ -2343,7 +2343,7 @@
           let fullName = document.getElementById("name").value.trim();
           let email = document.getElementById("email").value.trim();
           let phoneNumber = document.getElementById("phone").value.trim();
-          let service = document.getElementById("selectValu").value;
+          let service = document.getElementById("service").value;
           let date = document.getElementById("customDate").value.trim();
           let time = document.getElementById("customTime").value.trim();
           let address = document.getElementById("address").value.trim();
