--- a/book-now/index.html
+++ b/book-now/index.html
@@ -2413,7 +2413,7 @@
               document.getElementById("loader").style.display = "none";
               errorBox.innerHTML = response.message;
               errorBox.style.display = "block";
-              alert(response)
+              console.log(response)
             })
             .catch((error) => {
               document.getElementById("loader").style.display = "none";
