--- a/book-now/index.html
+++ b/book-now/index.html
@@ -2408,10 +2408,16 @@
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(formData),
           })
-            .then((response) =>  console.log(response.json()))
+            .then(response => {
+              if (!response.ok) {
+                  throw new Error(`HTTP error! Status: ${response.status}`);
+              }
+              console.log(response.json())
+              return response.json();
+            })
             .then((data) => {
               document.getElementById("loader").style.display = "none";
-              errorBox.innerHTML = response;
+              errorBox.innerHTML = data;
               errorBox.style.display = "block";
               console.log(data)
             })
