--- a/book-now/index.html
+++ b/book-now/index.html
@@ -2402,7 +2402,7 @@
             address,
             message,
           };
-
+          console.log(formData)
           fetch("https://kartizo-api.onrender.com/contact", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
