--- a/our-solutions/solutions-for-individual&family.html
+++ b/our-solutions/solutions-for-individual&family.html
@@ -135,7 +135,7 @@
         }
       }
     </style>
-    <title>Move Management Solutions for Individuals & Families &#8211; Kartizo Company</title>
+    <title>Solutions for Individuals & Families &#8211; Kartizo Company</title>
     <meta name="robots" content="max-image-preview:large" />
     <style>
       img:is([sizes="auto" i], [sizes^="auto," i]) {
